--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,7 +10,14 @@
     "title": "Find the perfect workspace",
     "subtitle": "Discover and book offices, meeting rooms and coworking spaces worldwide by the hour, day or month",
     "searchPlaceholder": "Search by location, space type, or features...",
-    "searchButton": "Search"
+    "searchButton": "Search",
+    "search": "Search",
+    "whatLabel": "What are you planning?",
+    "whereLabel": "Where?",
+    "whenLabel": "When?",
+    "locationPlaceholder": "City, neighborhood or zip code",
+    "datePlaceholder": "Anytime",
+    "helpText": "Thousands of unique spaces available for your next project"
   },
   "categories": {
     "title": "Find by space type",
@@ -186,7 +193,7 @@
     "rentalPeriod": "Rental Period",
     "selectRentalPeriod": "Select period",
     "hourly": "Hourly",
-    "daily": "Daily", 
+    "daily": "Daily",
     "weekly": "Weekly",
     "monthly": "Monthly",
     "pricePerHour": "Price per Hour ($)",
