docs: updated organization name

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -80,7 +80,7 @@
     "help": "Help",
     "contact": "Contact",
     "terms": "Terms",
-    "copyright": "© 2025 OfiKai. All rights reserved."
+    "copyright": "© 2025 Keysely. All rights reserved."
   },
   "explore": {
     "title": "Explore Spaces",
@@ -166,7 +166,7 @@
   "listSpace": {
     "title": "List Your Workspace",
     "subtitle": "Share your space with professionals worldwide and earn extra income",
-    "whyList": "Why List with OfiKai?",
+    "whyList": "Why List with Keysely?",
     "earnIncome": "Earn Extra Income",
     "earnIncomeDesc": "Monetize your unused space and generate passive income",
     "globalReach": "Global Reach",
@@ -200,7 +200,7 @@
     "pricePerDay": "Price per Day ($)",
     "pricePerWeek": "Price per Week ($)",
     "pricePerMonth": "Price per Month ($)",
-    "serviceFee": "* OfiKai charges a 15% service fee on all bookings.",
+    "serviceFee": "* Keysely charges a 15% service fee on all bookings.",
     "amenities": "Amenities & Features",
     "availability": "Availability",
     "availableDays": "Available Days",
