--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -81,7 +81,7 @@
     "help": "Ayuda",
     "contact": "Contacto",
     "terms": "Términos",
-    "copyright": "© 2025 OfiKai. Todos los derechos reservados."
+    "copyright": "© 2025 Keysely. Todos los derechos reservados."
   },
   "explore": {
     "title": "Explorar Espacios",
@@ -167,7 +167,7 @@
   "listSpace": {
     "title": "Lista tu Espacio de Trabajo",
     "subtitle": "Comparte tu espacio con profesionales de todo el mundo y genera ingresos adicionales",
-    "whyList": "¿Por qué listar con OfiKai?",
+    "whyList": "¿Por qué listar con Keysely?",
     "earnIncome": "Generar Ingresos Adicionales",
     "earnIncomeDesc": "Monetiza tu espacio no utilizado y genera ingresos pasivos",
     "globalReach": "Alcance Global",
@@ -201,7 +201,7 @@
     "pricePerDay": "Precio por Día ($)",
     "pricePerWeek": "Precio por Semana ($)",
     "pricePerMonth": "Precio por Mes ($)",
-    "serviceFee": "* OfiKai cobra una tarifa de servicio del 15% en todas las reservas.",
+    "serviceFee": "* Keysely cobra una tarifa de servicio del 15% en todas las reservas.",
     "amenities": "Servicios y Características",
     "availability": "Disponibilidad",
     "availableDays": "Días Disponibles",
