chore: updated translations

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -84,7 +84,7 @@
     "copyright": "© 2025 Keysely. Todos los derechos reservados."
   },
   "explore": {
-    "title": "Explorar Espacios",
+    "title": "Explorar espacios",
     "searchPlaceholder": "Buscar espacios...",
     "spaceType": "Tipo de espacio",
     "allTypes": "Todos los tipos",
@@ -137,7 +137,7 @@
     "home": "Inicio",
     "explore": "Explorar",
     "spaceNotFound": "Espacio no encontrado",
-    "backToExplore": "Volver a Explorar",
+    "backToExplore": "Volver a explorar",
     "upToPeople": "Hasta {{count}} personas",
     "hourlyBooking": "Reserva por horas",
     "amenities": "Servicios",
@@ -145,17 +145,17 @@
     "policies": "Políticas",
     "reviews": "Reseñas",
     "features": "Características",
-    "bookingPolicies": "Políticas de Reserva",
+    "bookingPolicies": "Políticas de reserva",
     "noPolicies": "No se han establecido políticas específicas para este espacio",
     "hostedBy": "Alojado por {{name}}",
     "workspaceOwner": "Propietario del espacio",
-    "selectDate": "Seleccionar Fecha",
-    "startTime": "Hora de Inicio",
-    "endTime": "Hora de Fin",
-    "numberOfGuests": "Número de Huéspedes",
+    "selectDate": "Seleccionar fecha",
+    "startTime": "Hora de inicio",
+    "endTime": "Hora de fin",
+    "numberOfGuests": "Número de huéspedes",
     "serviceFee": "Tarifa de servicio",
     "total": "Total",
-    "reservePayNow": "Reservar y Pagar Ahora",
+    "reservePayNow": "Reservar y pagar ahora",
     "creatingBooking": "Creando Reserva...",
     "redirectingPayment": "Redirigiendo al Pago...",
     "securePayment": "Pago seguro vía Stripe • Tarifa de plataforma del 15% incluida",
@@ -165,18 +165,18 @@
     "failedBooking": "Error al crear la reserva"
   },
   "listSpace": {
-    "title": "Lista tu Espacio de Trabajo",
+    "title": "Lista tu espacio de trabajo",
     "subtitle": "Comparte tu espacio con profesionales de todo el mundo y genera ingresos adicionales",
     "whyList": "¿Por qué listar con Keysely?",
-    "earnIncome": "Generar Ingresos Adicionales",
+    "earnIncome": "Generar ingresos adicionales",
     "earnIncomeDesc": "Monetiza tu espacio no utilizado y genera ingresos pasivos",
-    "globalReach": "Alcance Global",
+    "globalReach": "Alcance global",
     "globalReachDesc": "Conecta con profesionales de todo el mundo",
-    "securePlatform": "Plataforma Segura",
+    "securePlatform": "Plataforma segura",
     "securePlatformDesc": "Reservas protegidas y procesamiento de pagos seguro",
-    "basicInfo": "Información Básica",
-    "spaceTitle": "Título del Espacio",
-    "spaceTitlePlaceholder": "ej., Oficina Privada Moderna en el Centro",
+    "basicInfo": "Información básica",
+    "spaceTitle": "Título del espacio",
+    "spaceTitlePlaceholder": "ej., Oficina privada moderna en el centro",
     "description": "Descripción",
     "descriptionPlaceholder": "Describe tu espacio, sus características y qué lo hace especial...",
     "category": "Categoría",
@@ -191,29 +191,29 @@
     "city": "Ciudad",
     "cityPlaceholder": "ej., Madrid",
     "pricing": "Precios",
-    "rentalPeriod": "Período de Renta",
+    "rentalPeriod": "Período de renta",
     "selectRentalPeriod": "Seleccionar período",
-    "hourly": "Por Hora",
-    "daily": "Por Día",
-    "weekly": "Por Semana",
-    "monthly": "Por Mes",
-    "pricePerHour": "Precio por Hora ($)",
-    "pricePerDay": "Precio por Día ($)",
-    "pricePerWeek": "Precio por Semana ($)",
-    "pricePerMonth": "Precio por Mes ($)",
+    "hourly": "Por hora",
+    "daily": "Por día",
+    "weekly": "Por semana",
+    "monthly": "Por mes",
+    "pricePerHour": "Precio por hora ($)",
+    "pricePerDay": "Precio por día ($)",
+    "pricePerWeek": "Precio por semana ($)",
+    "pricePerMonth": "Precio por mes ($)",
     "serviceFee": "* Keysely cobra una tarifa de servicio del 15% en todas las reservas.",
-    "amenities": "Servicios y Características",
+    "amenities": "Servicios y características",
     "availability": "Disponibilidad",
-    "availableDays": "Días Disponibles",
-    "availableHours": "Horarios Disponibles",
-    "startTime": "Hora de Inicio",
-    "endTime": "Hora de Fin",
+    "availableDays": "Días disponibles",
+    "availableHours": "Horarios disponibles",
+    "startTime": "Hora de inicio",
+    "endTime": "Hora de fin",
     "photos": "Fotos",
-    "createListing": "Crear Listado",
-    "creatingListing": "Creando Listado...",
+    "createListing": "Crear listado",
+    "creatingListing": "Creando listado...",
     "listingCreated": "Tu espacio ha sido listado exitosamente.",
     "amenitiesList": {
-      "highSpeedWifi": "WiFi de Alta Velocidad",
+      "highSpeedWifi": "WiFi de alta velocidad",
       "printerScanner": "Impresora/Escáner",
       "coffeeAndTea": "Café y Té",
       "kitchenAccess": "Acceso a Cocina",
