--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -96,6 +96,23 @@
     "viewDetails": "Ver detalles",
     "bookNow": "Reservar ahora",
     "loadMore": "Cargar más espacios",
+    "searchBar": {
+      "whatLookingFor": "¿Qué buscas?",
+      "searchSpaces": "Buscar espacios...",
+      "location": "Ubicación",
+      "whereToGo": "¿A dónde vas?",
+      "checkIn": "Entrada",
+      "checkOut": "Salida",
+      "addDate": "Agrega fecha",
+      "advancedFilters": "Filtros Avanzados",
+      "clear": "Limpiar",
+      "applyFilters": "Aplicar Filtros",
+      "filters": "Filtros",
+      "noSpacesFound": "No se encontraron espacios",
+      "adjustFilters": "Intenta ajustar tus filtros de búsqueda o explora diferentes criterios.",
+      "clearFilters": "Limpiar filtros",
+      "removeFilter": "Remover filtro"
+    },
     "features": {
       "wifi": "WiFi",
       "coffee": "Café",
