--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -184,6 +184,9 @@
     "save": "Save",
     "saved": "Saved",
     "showAllPhotos": "Show all {{count}} photos",
+    "whereYoullBe": "Where you'll be",
+    "mapNotAvailable": "Map not available",
+    "mapNotConfigured": "Google Maps is not configured",
     "shareDialog": {
       "title": "Share this space",
       "copyLink": "Copy link",
