--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -185,6 +185,9 @@
     "save": "Guardar",
     "saved": "Guardado",
     "showAllPhotos": "Ver todas las {{count}} fotos",
+    "whereYoullBe": "Dónde vas a estar",
+    "mapNotAvailable": "Mapa no disponible",
+    "mapNotConfigured": "Google Maps no está configurado",
     "shareDialog": {
       "title": "Comparte este espacio",
       "copyLink": "Copiar enlace",
