feat: improved styles of profile and user menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -154,7 +154,14 @@
     "manageSpaces": "Manage Spaces",
     "goToDashboard": "Go to Dashboard",
     "spaceManagement": "Space Management",
-    "spaceManagementDesc": "Manage your listed spaces, review bookings and configure payments."
+    "spaceManagementDesc": "Manage your listed spaces, review bookings and configure payments.",
+    "exploreSpaces": "Explore Spaces",
+    "seeAll": "See All",
+    "back": "Back",
+    "saving": "Saving...",
+    "saveChanges": "Save Changes",
+    "cancel": "Cancel",
+    "add": "Add"
   },
   "spaceDetail": {
     "home": "Home",
@@ -548,5 +555,43 @@
     "signUpError": "Sign up error",
     "passwordError": "Password error",
     "passwordMinLength": "Password must be at least 6 characters"
+  },
+  "profile": {
+    "member": "Member",
+    "booking": "booking",
+    "bookings": "bookings",
+    "review": "review",
+    "reviews": "reviews",
+    "yearsOnPlatform": "years on Keysely",
+    "editProfile": "Edit Profile",
+    "verifiedIdentity": "Verified Identity",
+    "verifiedIdentityDesc": "This user has confirmed their identity and contact information",
+    "aboutMe": "About me",
+    "additionalInfo": "Additional Information",
+    "myBookings": "My Bookings",
+    "noBookings": "You don't have any bookings yet",
+    "favorites": "Favorites",
+    "personalInfo": "Personal Information",
+    "address": "Address",
+    "hostInfo": "Host Information",
+    "settings": "Settings",
+    "fullName": "Full Name",
+    "email": "Email",
+    "phone": "Phone",
+    "company": "Company",
+    "bio": "Bio",
+    "bioPlaceholder": "Tell us a bit about yourself...",
+    "addressInformation": "Address Information",
+    "streetAddress": "Street Address",
+    "streetAddressPlaceholder": "Street and number",
+    "city": "City",
+    "cityPlaceholder": "Your city",
+    "state": "State",
+    "statePlaceholder": "Your state",
+    "postalCode": "Postal Code",
+    "country": "Country",
+    "profileUpdated": "Profile updated successfully!",
+    "updateFailed": "Failed to update profile",
+    "pleaseSignIn": "Please sign in to view your profile"
   }
 }
