--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -155,7 +155,14 @@
     "manageSpaces": "Gestionar Espacios",
     "goToDashboard": "Ir al Dashboard",
     "spaceManagement": "Gestión de Espacios",
-    "spaceManagementDesc": "Administra tus espacios listados, revisa reservas y configura pagos."
+    "spaceManagementDesc": "Administra tus espacios listados, revisa reservas y configura pagos.",
+    "exploreSpaces": "Explorar Espacios",
+    "seeAll": "Ver Todo",
+    "back": "Volver",
+    "saving": "Guardando...",
+    "saveChanges": "Guardar Cambios",
+    "cancel": "Cancelar",
+    "add": "Agregar"
   },
   "spaceDetail": {
     "home": "Inicio",
@@ -549,5 +556,43 @@
     "signUpError": "Error de registro",
     "passwordError": "Error de contraseña",
     "passwordMinLength": "La contraseña debe tener al menos 6 caracteres"
+  },
+  "profile": {
+    "member": "Miembro",
+    "booking": "reserva",
+    "bookings": "reservas",
+    "review": "evaluación",
+    "reviews": "evaluaciones",
+    "yearsOnPlatform": "años en Keysely",
+    "editProfile": "Editar Perfil",
+    "verifiedIdentity": "Identidad Verificada",
+    "verifiedIdentityDesc": "Este usuario ha confirmado su identidad e información de contacto",
+    "aboutMe": "Acerca de mí",
+    "additionalInfo": "Información Adicional",
+    "myBookings": "Mis Reservas",
+    "noBookings": "Aún no tienes reservas",
+    "favorites": "Favoritos",
+    "personalInfo": "Información Personal",
+    "address": "Dirección",
+    "hostInfo": "Información del Anfitrión",
+    "settings": "Configuración",
+    "fullName": "Nombre Completo",
+    "email": "Correo Electrónico",
+    "phone": "Teléfono",
+    "company": "Empresa",
+    "bio": "Biografía",
+    "bioPlaceholder": "Cuéntanos un poco sobre ti...",
+    "addressInformation": "Información de Dirección",
+    "streetAddress": "Dirección",
+    "streetAddressPlaceholder": "Calle y número",
+    "city": "Ciudad",
+    "cityPlaceholder": "Tu ciudad",
+    "state": "Estado",
+    "statePlaceholder": "Tu estado",
+    "postalCode": "Código Postal",
+    "country": "País",
+    "profileUpdated": "¡Perfil actualizado exitosamente!",
+    "updateFailed": "Error al actualizar el perfil",
+    "pleaseSignIn": "Por favor inicia sesión para ver tu perfil"
   }
 }
